@@ -6,11 +6,12 @@ NEW FUNCTIONS:
 
 MINOR FEATURES AND BUG FIXES:
 
+* the use of relative quantum catches is now optional in the categorical colorspace (though still produces a warning), for greater flexibility 
 * updated several functions to work when rspec object has only one spectrum
 * fixed bug in voloverlap where interactive plots would result in error
 * fixed incorrect labels in the maxwell triangle plot
-* the use of relative quantum catches is now optional in the categorical colorspace (though still produces a warning), for greater flexibility 
-
+* fixed a bug in as.rspec() in which lim was not applied when interpolate = FALSE
+* added some more informative messages and warnings
 
 pavo 1.0
 ------------------------------------------------------------------------------
